--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RestaFinder</string>
+
+    <string name="restaurant_add_to_favourite">Restaurant was added to favourites</string>
+    <string name="restaurant_remove_from_favourite">Restaurant was removed from favourites</string>
 </resources>
