--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,14 @@
 <resources>
     <string name="app_name">RestaFinder</string>
 
+    <!-- Fetch data loading view -->
+    <string name="home_fetch_loading_text">Data fetching. Please wait…</string>
+
+    <!-- Fullscreen error view -->
+    <string name="fullscreen_error_retry">retry</string>
+    <string name="fullscreen_error_description">Something went wrong :(\n Please try again</string>
+
+    <!-- Restaurant item card -->
     <string name="restaurant_add_to_favourite">Restaurant was added to favourites</string>
     <string name="restaurant_remove_from_favourite">Restaurant was removed from favourites</string>
 </resources>
